cloudkube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: team-ai-cal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: team-ai-cal
  template:
    metadata:
      labels:
        app: team-ai-cal
    spec:
      containers:
      - name: team-ai-cal
        image: ywlee/my-team-calendar:v1.5
        command: ["/home/proj/scripts/init.sh"]
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: team-ai-cal
spec:
  type: LoadBalancer
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: team-ai-cal
